// compile command:
// python -m grpc_tools.protoc -I=p2pfl/proto --python_out=p2pfl/proto --grpc_python_out=p2pfl/proto p2pfl/proto/node.proto --mypy_out=p2pfl/proto

syntax = "proto3";
import "google/protobuf/empty.proto";

option java_package ="com.example.mobile_p2pfl.protocol.proto";

package node;


message Weights {
    bytes weights = 1;
}

message ResponseMessage {
    optional string error = 1;
}

service NodeServices {
    rpc send_weights(Weights) returns (ResponseMessage);
}
